--- a/Lab3/Lab3/Base.lproj/Main.storyboard
+++ b/Lab3/Lab3/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--Boulder Humane Society-->
+        <!--MapCU-->
         <scene sceneID="0bz-cl-yzl">
             <objects>
                 <tableViewController id="mgL-RA-Ryf" customClass="ViewController" customModule="Lab3" customModuleProvider="target" sceneMemberID="viewController">
@@ -14,13 +14,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellIdentifier" id="WsF-Ih-BqY">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="CellIdentifier" rowHeight="63" id="WsF-Ih-BqY">
+                                <rect key="frame" x="0.0" y="92" width="600" height="63"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WsF-Ih-BqY" id="9vq-f9-KND">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="533" height="62"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vPP-8f-8ic">
+                                            <rect key="frame" x="0.0" y="0.0" width="211" height="62"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="211" id="FBH-zg-hyK"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="vPP-8f-8ic" firstAttribute="leading" secondItem="9vq-f9-KND" secondAttribute="leading" id="2gi-MB-UhX"/>
+                                        <constraint firstItem="vPP-8f-8ic" firstAttribute="top" secondItem="9vq-f9-KND" secondAttribute="top" id="4Rr-ch-3V4"/>
+                                        <constraint firstAttribute="bottom" secondItem="vPP-8f-8ic" secondAttribute="bottom" id="aTc-sw-4Dm"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="oE9-S5-2Yr" kind="show" identifier="placesSegue" id="B7r-Ov-lgc"/>
+                                    <segue destination="JAj-Cq-74y" kind="show" identifier="infoSegue" trigger="accessoryAction" id="iyI-HR-Ghg"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -28,16 +45,167 @@
                             <outlet property="delegate" destination="mgL-RA-Ryf" id="tif-hI-UuK"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Boulder Humane Society" id="lcD-Hx-yoT"/>
+                    <navigationItem key="navigationItem" title="MapCU" id="lcD-Hx-yoT"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cqk-LM-gCI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1226" y="301"/>
         </scene>
-        <!--Boulder Humane Society-->
+        <!--Info View Controller-->
+        <scene sceneID="17e-5J-cei">
+            <objects>
+                <tableViewController id="JAj-Cq-74y" customClass="InfoViewController" customModule="Lab3" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="QB3-lX-TWW">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <sections>
+                            <tableViewSection headerTitle="Places Info" id="JbT-8d-ki9">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="gsy-jP-YYX" detailTextLabel="lZB-KN-Iik" style="IBUITableViewCellStyleValue1" id="ng2-gn-Obg">
+                                        <rect key="frame" x="0.0" y="114" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ng2-gn-Obg" id="H6a-Xi-cNN">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Places" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gsy-jP-YYX">
+                                                    <rect key="frame" x="-1" y="12" width="48" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Number of Places" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lZB-KN-Iik">
+                                                    <rect key="frame" x="456" y="12" width="129" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="H8t-jA-4dN">
+                                        <rect key="frame" x="0.0" y="158" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H8t-jA-4dN" id="Rld-GT-Msp">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="JAj-Cq-74y" id="wME-n5-aXz"/>
+                            <outlet property="delegate" destination="JAj-Cq-74y" id="7Si-Wo-7CP"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="numberColumn" destination="lZB-KN-Iik" id="pCH-Tu-FVJ"/>
+                        <outlet property="placesColumn" destination="gsy-jP-YYX" id="K5C-ob-ljR"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cao-11-SoP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1780" y="-331"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="NSj-Fv-JTe">
+            <objects>
+                <tableViewController id="oE9-S5-2Yr" customClass="DetailViewController" customModule="Lab3" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Eto-4A-GKd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellIdentifier" id="xSw-tQ-dZY">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xSw-tQ-dZY" id="gxu-tu-At0">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="oE9-S5-2Yr" id="G5P-MS-oVk"/>
+                            <outlet property="delegate" destination="oE9-S5-2Yr" id="CpK-pM-cWz"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Title" id="4Tn-Hy-qoF">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Vya-YE-AvP">
+                            <connections>
+                                <segue destination="jdy-9k-Yvk" kind="presentation" id="E5x-tQ-nFi"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aKv-8i-fhv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1923" y="306"/>
+        </scene>
+        <!--Add Items!-->
+        <scene sceneID="qgw-Sj-O8x">
+            <objects>
+                <viewController id="iLb-fy-R4q" customClass="AddViewController" customModule="Lab3" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5FA-fV-zaS"/>
+                        <viewControllerLayoutGuide type="bottom" id="ab5-ZX-vxg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fti-nm-am7">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U0k-he-8ZL">
+                                <rect key="frame" x="167" y="130" width="267" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="267" id="vIq-eJ-z1x"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add an item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y60-E5-8cF">
+                                <rect key="frame" x="254" y="88" width="92" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="U0k-he-8ZL" firstAttribute="top" secondItem="y60-E5-8cF" secondAttribute="bottom" constant="21" id="3ua-Se-pau"/>
+                            <constraint firstItem="U0k-he-8ZL" firstAttribute="centerX" secondItem="fti-nm-am7" secondAttribute="centerX" id="E2T-xw-QiR"/>
+                            <constraint firstItem="U0k-he-8ZL" firstAttribute="centerX" secondItem="y60-E5-8cF" secondAttribute="centerX" id="Fi1-hG-uPY"/>
+                            <constraint firstItem="y60-E5-8cF" firstAttribute="top" secondItem="5FA-fV-zaS" secondAttribute="bottom" constant="24" id="t58-dI-xwK"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Items!" id="dEI-Ff-ize">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="tLo-Jw-317">
+                            <connections>
+                                <segue destination="h3r-QV-vd1" kind="unwind" identifier="cancelSegue" unwindAction="unwindSegue:" id="3J6-eg-Vyw"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="u2L-Jo-9Az">
+                            <connections>
+                                <segue destination="h3r-QV-vd1" kind="unwind" identifier="doneSegue" unwindAction="unwindSegue:" id="bJo-ma-UGN"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="addBuilding" destination="U0k-he-8ZL" id="OrG-ZF-mq3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Lh-nH-SDz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="h3r-QV-vd1" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="3356" y="94"/>
+        </scene>
+        <!--Navigation Controller-->
         <scene sceneID="b1O-GZ-YC8">
             <objects>
-                <navigationController title="Boulder Humane Society" automaticallyAdjustsScrollViewInsets="NO" id="nz9-sY-Mn4" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nz9-sY-Mn4" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="PQx-1L-E5Z">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -51,6 +219,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7uc-Ye-ylz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="414" y="301"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9lc-AW-R3W">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jdy-9k-Yvk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="p3b-Xo-gbU">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="iLb-fy-R4q" kind="relationship" relationship="rootViewController" id="NiX-9j-fZs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ytT-DR-ig6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2544" y="94"/>
         </scene>
     </scenes>
 </document>
