--- a/Lab4/Lab4/Base.lproj/LaunchScreen.storyboard
+++ b/Lab4/Lab4/Base.lproj/LaunchScreen.storyboard
@@ -16,20 +16,7 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map" translatesAutoresizingMaskIntoConstraints="NO" id="xbc-ym-ztv">
-                                <rect key="frame" x="180" y="105" width="240" height="257"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="quP-9U-XJ7"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="xbc-ym-ztv" secondAttribute="bottom" constant="238" id="6D9-GT-wq3"/>
-                            <constraint firstItem="xbc-ym-ztv" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="85" id="98s-B7-aSG"/>
-                            <constraint firstItem="xbc-ym-ztv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="dTB-Ut-Z4U"/>
-                        </constraints>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -37,7 +24,4 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="map" width="1024" height="1024"/>
-    </resources>
 </document>
