changed title to resources

--- a/Lab4/Lab4/Base.lproj/Main.storyboard
+++ b/Lab4/Lab4/Base.lproj/Main.storyboard
@@ -129,7 +129,7 @@
                             <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Characters" id="Zdf-7t-Un8"/>
+                    <navigationItem key="navigationItem" title="Resources" id="Zdf-7t-Un8"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
             </objects>
