--- a/Project1/Project1/Base.lproj/LaunchScreen.storyboard
+++ b/Project1/Project1/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +17,25 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="TbO-mV-xLG">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="lDK-ia-UGh">
+                                <rect key="frame" x="155" y="92" width="291" height="75"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lDK-ia-UGh" firstAttribute="centerX" secondItem="TbO-mV-xLG" secondAttribute="centerX" id="9tB-zY-3dE"/>
+                            <constraint firstItem="TbO-mV-xLG" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="Kcv-xy-yZI"/>
+                            <constraint firstItem="lDK-ia-UGh" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="72" id="P0N-DO-fyN"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="TbO-mV-xLG" secondAttribute="bottom" id="WcE-2A-BMs"/>
+                            <constraint firstItem="lDK-ia-UGh" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="135" id="ee6-m7-Uo4"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="lDK-ia-UGh" secondAttribute="bottom" constant="433" id="emo-Eq-jrj"/>
+                            <constraint firstItem="TbO-mV-xLG" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="nec-td-YcE"/>
+                            <constraint firstAttribute="trailing" secondItem="TbO-mV-xLG" secondAttribute="trailing" id="oFC-kB-zwa"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +43,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="launch" width="640" height="640"/>
+        <image name="title" width="500" height="200"/>
+    </resources>
 </document>
