--- a/Lab5/Lab5/Base.lproj/LaunchScreen.storyboard
+++ b/Lab5/Lab5/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kitten3" translatesAutoresizingMaskIntoConstraints="NO" id="nvp-ha-ck9">
+                                <rect key="frame" x="145" y="78" width="310" height="340"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="310" id="lai-Bt-ifE"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="nvp-ha-ck9" secondAttribute="bottom" constant="182" id="JEi-9w-Mqm"/>
+                            <constraint firstItem="nvp-ha-ck9" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Mpa-FS-7lX"/>
+                            <constraint firstItem="nvp-ha-ck9" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="58" id="kAA-PN-rfr"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="kitten3" width="550" height="410"/>
+    </resources>
 </document>
