--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <!--To-Do List-->
         <scene sceneID="zAg-oL-tbF">
             <objects>
-                <tableViewController id="yl6-Ic-ScK" customClass="ToDoTableViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="yl6-Ic-ScK" customClass="ToDoTableViewController" customModule="Lab6" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="QwP-DW-GaX">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -26,7 +26,7 @@
                                             <rect key="frame" x="15" y="12" width="32" height="20"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="a3V-yW-WJT">
@@ -60,7 +60,7 @@
         <!--To-Do Item-->
         <scene sceneID="dgb-cf-WKt">
             <objects>
-                <viewController id="apC-7o-F1b" customClass="ItemViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="apC-7o-F1b" customClass="ItemViewController" customModule="Lab6" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zqb-dC-PeA"/>
                         <viewControllerLayoutGuide type="bottom" id="6Tm-mw-xjK"/>
@@ -70,19 +70,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To-Do Item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1kV-pg-Ip4">
-                                <rect key="frame" x="57" y="129" width="86" height="21"/>
+                                <rect key="frame" x="28" y="129" width="86" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U9W-Dv-Uwp">
-                                <rect key="frame" x="269" y="120" width="223" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="223" id="w6s-u9-NVQ"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="kD0-1s-pVF">
                                 <rect key="frame" x="0.0" y="234" width="600" height="216"/>
                                 <date key="date" timeIntervalSinceReferenceDate="477938866.18974298">
@@ -92,21 +84,29 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reminder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xdA-LW-yoW">
                                 <rect key="frame" x="264" y="186" width="73" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U9W-Dv-Uwp">
+                                <rect key="frame" x="337" y="120" width="223" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="223" id="Nt2-CO-lFz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="U9W-Dv-Uwp" secondAttribute="trailing" constant="88" id="5q4-E5-O2s"/>
-                            <constraint firstItem="xdA-LW-yoW" firstAttribute="top" secondItem="U9W-Dv-Uwp" secondAttribute="bottom" constant="36" id="Cgc-53-6mq"/>
-                            <constraint firstItem="U9W-Dv-Uwp" firstAttribute="bottom" secondItem="1kV-pg-Ip4" secondAttribute="bottom" id="KGY-7d-wrs"/>
-                            <constraint firstItem="kD0-1s-pVF" firstAttribute="centerX" secondItem="xdA-LW-yoW" secondAttribute="centerX" id="drE-0c-tgV"/>
-                            <constraint firstItem="kD0-1s-pVF" firstAttribute="leading" secondItem="FTg-68-Q76" secondAttribute="leading" id="drf-Pf-uVx"/>
-                            <constraint firstItem="1kV-pg-Ip4" firstAttribute="leading" secondItem="FTg-68-Q76" secondAttribute="leadingMargin" constant="37" id="f5P-JB-7kg"/>
-                            <constraint firstItem="U9W-Dv-Uwp" firstAttribute="top" secondItem="zqb-dC-PeA" secondAttribute="bottom" constant="56" id="fUa-qX-YqT"/>
-                            <constraint firstAttribute="trailing" secondItem="kD0-1s-pVF" secondAttribute="trailing" id="qi0-9f-SlU"/>
-                            <constraint firstItem="kD0-1s-pVF" firstAttribute="top" secondItem="xdA-LW-yoW" secondAttribute="bottom" constant="27" id="ub9-ia-PPK"/>
+                            <constraint firstItem="xdA-LW-yoW" firstAttribute="centerX" secondItem="kD0-1s-pVF" secondAttribute="centerX" id="CRS-sY-t4F"/>
+                            <constraint firstItem="U9W-Dv-Uwp" firstAttribute="top" secondItem="zqb-dC-PeA" secondAttribute="bottom" constant="56" id="K23-6I-Oow"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="U9W-Dv-Uwp" secondAttribute="trailing" constant="20" id="W3u-8w-0Zi"/>
+                            <constraint firstItem="1kV-pg-Ip4" firstAttribute="leading" secondItem="FTg-68-Q76" secondAttribute="leadingMargin" constant="8" id="Ydm-pj-cpo"/>
+                            <constraint firstItem="kD0-1s-pVF" firstAttribute="top" secondItem="1kV-pg-Ip4" secondAttribute="bottom" constant="84" id="h1F-n8-5uE"/>
+                            <constraint firstItem="kD0-1s-pVF" firstAttribute="top" secondItem="xdA-LW-yoW" secondAttribute="bottom" constant="27" id="ibZ-1e-Jzn"/>
+                            <constraint firstItem="kD0-1s-pVF" firstAttribute="leading" secondItem="FTg-68-Q76" secondAttribute="leading" id="sqW-Lr-hKt"/>
+                            <constraint firstAttribute="trailing" secondItem="kD0-1s-pVF" secondAttribute="trailing" id="u3N-Ue-ADM"/>
+                            <constraint firstItem="1kV-pg-Ip4" firstAttribute="bottom" secondItem="U9W-Dv-Uwp" secondAttribute="bottom" id="zip-6Y-p0X"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="To-Do Item" id="cJQ-Dd-VQm">
